fixed overflow and spacing problmes

--- a/static/style.css
+++ b/static/style.css
@@ -499,7 +499,7 @@ th:last-child {
     border-radius: 2rem;
     display: inline-block;
     white-space: nowrap;
-    max-width: 6rem;
+    max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     vertical-align: middle;
@@ -655,7 +655,7 @@ th:last-child {
     margin-top: 2rem;
     font-family: 'Satoshi';
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(13rem, 1fr));
     align-items: start;
     gap: 1.8rem;
     padding-bottom: 2.5rem;
@@ -719,6 +719,7 @@ th:last-child {
     border: #b7b7b7 0.2rem solid;
     border-radius: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
+    overflow: hidden;
 }
 
 .tasks-toolbar {
@@ -794,7 +795,7 @@ th:last-child {
 thead .list-headers th {
     text-align: left;
     background-color: #ffffff;
-    padding: 0.5rem 0 0.5rem 3.5rem;
+    padding: 0.5rem 0 0.5rem 0rem;
     border-bottom: #b7b7b7 0.2rem solid;
 }
 
@@ -813,7 +814,6 @@ thead .list-headers th {
     font-weight: 500;
     color: #000000;
     font-size: 0.95rem;
-    padding: 0.5rem 0 0.5rem 5rem;
 }
 
 .task-info {
@@ -855,4 +855,8 @@ thead .list-headers th {
     border-bottom-right-radius: 0.85rem;
     justify-content: center;
     align-items: center;
+}
+
+.checkbox-header, .checkbox-cell {
+    width: 3rem;
 }
